# react-native-superpowered

./: .gitmodules  README.md  clone_submodules.sh  index.js  index.ts  json_commands.ts  package.json
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: Recorder.cpp  jni_locker.hpp  jni_to_cpp.cpp  jni_utils.hpp
android/src/main/java/com/x86kernel/rnsuperpowered/: Audio.java  RNSuperpoweredModule.java  Recorder.java  SuperpoweredJni.java
ios/: Audio.mm  RNSuperpowered.h  RNSuperpowered.mm  RNSuperpowered.podspec  Recorder.mm
ios/RNSuperpowered.xcodeproj/: project.pbxproj
src/: Recorder.js  json_commands.ts  rn-superpowered.js  rn-superpowered.ts
src_json_to_superpowered/: json_to_superpowered.cpp  json_to_superpowered.hpp
src_xplatform/: json_to_superpowered.cpp
src_xplatform/json_command_handlers/: json_command_handlers.cpp  json_command_handlers.hpp
src_xplatform/json_command_handlers/media_player/: media_player.cpp  media_player.hpp
src_xplatform/json_commands/: json_commands.cpp  json_commands.hpp  json_to_superpowered.cpp  json_to_superpowered.hpp
src_xplatform/superpowered_if/: superpowered_initializer.cpp  superpowered_initializer.hpp
src_xplatform/superpowered_if/audio_io/: audio_io.cpp  audio_io.hpp
src_xplatform/superpowered_if/audio_io/android/: audio_io_android.cpp  audio_io_android.hpp
src_xplatform/superpowered_if/audio_io/ios/: audio_io_ios.hpp  audio_io_ios_mm.mm
